// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Client Code: client code 1`] = `
"import _test_assets_pages_index_vue from '/test/assets/pages/index.vue'

const routes = [
  {
    \\"component\\": () => import('/test/assets/pages/[...all].vue'),
    \\"name\\": \\"all\\",
    \\"path\\": \\"/:all(.*)\\",
    \\"props\\": true
  },
  {
    \\"name\\": \\"home\\",
    \\"path\\": \\"/home\\",
    \\"component\\": () => import('/test/assets/pages/home.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"index\\",
    \\"path\\": \\"/\\",
    \\"component\\": _test_assets_pages_index_vue,
    \\"props\\": true
  },
  {
    \\"path\\": \\"/user\\",
    \\"component\\": () => import('/test/assets/pages/user.vue'),
    \\"children\\": [
      {
        \\"name\\": \\"name-override\\",
        \\"path\\": \\":id\\",
        \\"component\\": () => import('/test/assets/pages/user/[id].vue'),
        \\"props\\": true,
        \\"meta\\": {
          \\"requiresAuth\\": false
        }
      }
    ],
    \\"props\\": true
  }
]

export default routes"
`;

exports[`Generate Nuxt Style Routes: nuxt style routes 1`] = `
Array [
  Object {
    "component": "/test/assets/nuxt-pages/_.vue",
    "name": "all",
    "path": "/:all(.*)",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/home.vue",
    "name": "home",
    "path": "/home",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/index.vue",
    "name": "index",
    "path": "/",
    "props": true,
  },
  Object {
    "children": Array [
      Object {
        "component": "/test/assets/nuxt-pages/user/_id.vue",
        "meta": Object {
          "requiresAuth": false,
        },
        "name": "name-override",
        "path": ":id",
        "props": true,
      },
    ],
    "component": "/test/assets/nuxt-pages/user.vue",
    "path": "/user",
    "props": true,
  },
]
`;

exports[`Generate Routes: routes 1`] = `
Array [
  Object {
    "component": "/test/assets/pages/[...all].vue",
    "name": "all",
    "path": "/:all(.*)",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/home.vue",
    "name": "home",
    "path": "/home",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/index.vue",
    "name": "index",
    "path": "/",
    "props": true,
  },
  Object {
    "children": Array [
      Object {
        "component": "/test/assets/pages/user/[id].vue",
        "meta": Object {
          "requiresAuth": false,
        },
        "name": "name-override",
        "path": ":id",
        "props": true,
      },
    ],
    "component": "/test/assets/pages/user.vue",
    "path": "/user",
    "props": true,
  },
]
`;
